[package]
name = "vercel-security-checkpoint-foss"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"
faster-hex = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
reqwest = { version = "0.12", features = ["cookies"], optional = true }

[features]
default = ["cli"]
cli = ["dep:tokio", "dep:reqwest"]

[[bench]]
name = "solver"
harness = false
